third_party/WebKit/Source/core/svg/SVGSVGElement.cpp
@@ -193,6 +193,14 @@ void SVGSVGElement::parseAttribute(const QualifiedName& name, const AtomicString
     } else if (name == HTMLNames::onerrorAttr) {
         document().setWindowAttributeEventListener(EventTypeNames::error, createAttributeEventListener(document().frame(), name, value, eventParameterName()));
     } else if (SVGZoomAndPan::parseAttribute(name, value)) {
+    } else if (name == SVGNames::widthAttr || name == SVGNames::heightAttr) {
+        SVGAnimatedLength* property = name == SVGNames::widthAttr ? m_width : m_height;
+        SVGParsingError parseError;
+        if (!value.isNull())
+            parseError = property->setBaseValueAsString(value);
+        if (parseError != SVGParseStatus::NoError || value.isNull())
+            property->setDefaultValueAsString("100%");
+        reportAttributeParsingError(parseError, name, value);
     } else {
         SVGElement::parseAttribute(name, oldValue, value);
     }
